<resources>
    <string name="app_name">Quizzly</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="top_scores">Top Scores :</string>
    <string name="new_quizz">New Quizz</string>
    <string name="last_name">Last Name :</string>
    <string name="first_name">First Name :</string>
    <string name="cancel">cancel</string>
    <string name="start">start</string>
    <string name="quizz_fragment_label">Quizzly</string>
    <string name="submit_answer">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_score_is">Your score is :</string>
    <string name="result_fragment_label">Result</string>
    <string name="finish">Finish</string>
</resources>