<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.quizzly.fragments.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.quizzly.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_QuizFragment"
            app:destination="@id/QuizFragment" />
    </fragment>

    <fragment
        android:id="@+id/QuizFragment"
        android:name="com.example.quizzly.fragments.QuizFragment"
        android:label="@string/quizz_fragment_label"
        tools:layout="@layout/fragment_quiz">

        <action
            android:id="@+id/action_QuizFragment_to_ResultFragment"
            app:destination="@id/ResultFragment" />
<!--        <action-->
<!--            android:id="@+id/action_QuizFragment_to_QuizFragment"-->
<!--            app:destination="@id/QuizFragment" />-->
    </fragment>

    <fragment
        android:id="@+id/ResultFragment"
        android:name="com.example.quizzly.fragments.ResultFragment"
        android:label="@string/result_fragment_label"
        tools:layout="@layout/fragment_result">

        <action
            android:id="@+id/action_ResultFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>
